--- a/BL-8-Struct-Enum-Tuple-Generic/BL8_P2_3_2DRectangleMassive/BL8_P2_3_2DRectangleMassive.csproj
+++ b/BL-8-Struct-Enum-Tuple-Generic/BL8_P2_3_2DRectangleMassive/BL8_P2_3_2DRectangleMassive.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7278B986-6173-4020-A58B-78E0605C6C47}</ProjectGuid>
+    <ProjectGuid>{F4171089-374C-4CEE-BE8D-44AEC0A61246}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BL_8_Struct_Enum_Tuple_Generic</RootNamespace>
-    <AssemblyName>BL-8-Struct-Enum-Tuple-Generic</AssemblyName>
+    <RootNamespace>BL8_P2_3_2DRectangleMassive</RootNamespace>
+    <AssemblyName>BL8_P2_3_2DRectangleMassive</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,15 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lesson.Ananymous.cs" />
-    <Compile Include="Lesson.Nullable.cs" />
-    <Compile Include="Lesson.Tuple.cs" />
-    <Compile Include="Lesson.Generics.cs" />
-    <Compile Include="Practice.cs" />
-    <Compile Include="Lesson.Enums.cs" />
-    <Compile Include="Lesson.Struct.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
